tests/auto/widgets/widgets/qcombobox/tst_qcombobox.cpp
@@ -170,6 +170,7 @@ private slots:
     void checkMenuItemPosWhenStyleSheetIsSet();
     void checkEmbeddedLineEditWhenStyleSheetIsSet();
     void propagateStyleChanges();
+    void clearModel();
 
 private:
     PlatformInputContext m_platformInputContext;
@@ -3598,6 +3599,37 @@ void tst_QComboBox::propagateStyleChanges()
     combo.setSizeAdjustPolicy(QComboBox::AdjustToContents);
     combo.setStyle(&frameStyle);
     QVERIFY(frameStyle.inquired);
+}
+
+void tst_QComboBox::clearModel()
+{
+    QStringListModel model({ QLatin1String("one"), QLatin1String("two"), QLatin1String("three") });
+
+    QComboBox combo;
+    combo.setModel(&model);
+    combo.setCurrentIndex(1);
+
+    QCOMPARE(combo.currentIndex(), 1);
+    QCOMPARE(combo.currentText(), model.index(1).data().toString());
+
+    QSignalSpy indexSpy(&combo, &QComboBox::currentIndexChanged);
+    QSignalSpy textSpy(&combo, &QComboBox::currentTextChanged);
+
+    QVERIFY(indexSpy.isEmpty());
+    QVERIFY(textSpy.isEmpty());
+
+    model.setStringList({});
+
+    QCOMPARE(indexSpy.count(), 1);
+    const int index = indexSpy.takeFirst().at(0).toInt();
+    QCOMPARE(index, -1);
+
+    QCOMPARE(textSpy.count(), 1);
+    const QString text = textSpy.takeFirst().at(0).toString();
+    QCOMPARE(text, QString());
+
+    QCOMPARE(combo.currentIndex(), -1);
+    QCOMPARE(combo.currentText(), QString());
 }
 
 QTEST_MAIN(tst_QComboBox)
